add the style of post info

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ ga:
 
 about: 学无止境，每天进步一点点。@monster1935
 
+# contact me ways and icons
 way:
     Github: http://github.com/monster1935
     Segment: https://segmentfault.com/u/monster1935
