--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ ga:
 
 # about Infomation
 
-about: 学无止境，每天进步一点点。@monster1935
+about: 骨曰切，象曰磋，玉曰琢，石曰磨；切磋琢磨，乃成宝器。人之学问知能成就，犹骨象玉石切磋琢磨也。--语出《诗．衞风．淇奥》。与君共勉。
 
 # contact me ways and icons
 way:
